@startuml

class House {
  + addRoom(...) : boolean
}

class Room {
  - name : String
  - floor : int
  + Room(...)
  + getName() : String
  + getFloor() : int
  + getDimensions() : Dimensions
}

class Dimensions {
  - width : double
  - length : double
  - height : double

  + Dimensions(...)
  + getWidth() : double
  + getLength() : double
  + getHeight() : double
}

class RoomDTO {
  - name : String
  - floor : int
  - width : double
  - length : double
  - height : double

  + RoomDTO(...)
  + getName() : String
  + getFloor() : int
  + getWidth() : double
  + getLength() : double
  + getHeight() : double
}

class AddRoomController {
  - house : House
  + AddRoomController(...)
  + addNewRoomToHouse(...) : boolean
}

AddRoomController "1" ..> "1" House : uses
House "1" *-- "List<Room>" Room : contains
Room "1" *-- "1" Dimensions : has
AddRoomController "1" ..> "1" RoomDTO : uses

@enduml
